--- a/MusicBox/MusicBox.vcxproj
+++ b/MusicBox/MusicBox.vcxproj
@@ -86,6 +86,8 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Notes.h" />
+    <ClInclude Include="TakeOnMe.h" />
     <ClInclude Include="__vm\.MusicBox.vsarduino.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
